# Buoy

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
src/: main.tsx  routeTree.gen.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: V1__initial.sql  V3__running_flag.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/db/: bots.rs  env_vars.rs  logs.rs  mod.rs  schema.rs  settings.rs
src-tauri/src/process/: manager.rs  metrics.rs  mod.rs  spawner.rs  watcher.rs
src/app/: providers.tsx  queryClient.ts
src/components/bot/: BotActionBar.tsx  BotCard.tsx  BotStatusBadge.tsx
src/components/bot-detail/: EnvVarManager.tsx  LogViewer.tsx  MetricsPanel.tsx  OverviewPanel.tsx
src/components/layout/: CloseDialog.tsx  Sidebar.tsx  Titlebar.tsx
src/components/settings/: SettingsShell.tsx
src/components/wizard/: WizardShell.tsx
src/hooks/: useBot.ts  useBotEnvVars.ts  useBotEvents.ts  useBotLogs.ts  useBots.ts  useMetrics.ts  useSettings.ts
src/lib/: format.ts  ipc.ts  validate.ts
src/routes/: __root.tsx  dashboard.tsx  help.tsx  settings.tsx
src/routes/bots/: $botId.env.tsx  $botId.logs.tsx  $botId.metrics.tsx  $botId.tsx  new.tsx
src/styles/: globals.css  tokens.ts
test-bot/: README.md  index.js  package.json
(+4 files in other folders)
